# Goggles

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  .semgrep.yml  .semgrepignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  ROADMAP.md  THIRD_PART_NOTICES.md  lsan.supp  pixi.toml  vcpkg.json
.github/workflows/: README.md  ci.yml  presets-build.yml  shader-validation.yml
.omc/plans/: comprehensive-test-framework.md
.semgrep/rules/: policy_bans.yml
.serena/: project.yml
artifacts/policy/: util-core-policy.json  (+1 more)
cmake/: CodeQuality.cmake  CompilerConfig.cmake  Dependencies.cmake  Threading.cmake  toolchain-i686.cmake
config/: goggles.template.toml  goggles.toml  goggles_layer.json  goggles_layer.json.in
docs/: 00_design_snapshot.md  PROJECT_POLICIES.md  architecture.md  dmabuf_sharing.md  filter_chain_workflow.md  input_forwarding.md  phase2_network_streaming_plan.md  project_policies.md  retroarch.md  retroarch_shader_system.md  shader_compatibility.md  threading.md  threading_architecture.md  threading_usage.md  vk_layer_usage.md
filter-chain/: CMakeLists.txt
openspec/: config.yaml  project.md
scripts/: check-ide-setup.sh  ci-openspec-check.sh  download_retroarch_shaders.sh  ensure-init.sh  generate_shader_report.sh  help.sh  init-format-setup.sh  install-pre-commit-hook.sh  pixi-env-clean.sh  pre-commit-format.sh  setup-ide.sh  start.sh  test-cli.sh  test-start.sh  test_shaders.sh  test_vkcube_capture.sh
shaders/: blit.frag.slang
src/: CMakeLists.txt
src/app/: CMakeLists.txt  application.cpp  application.hpp  capture_receiver.cpp  capture_receiver.hpp  cli.cpp  cli.hpp  main.cpp  reaper_main.cpp  sdl_platform.cpp  sdl_platform.hpp  ui_controller.cpp  ui_controller.hpp
src/capture/: CMakeLists.txt  capture_protocol.hpp  capture_receiver.cpp  capture_receiver.hpp
src/capture/compositor/: compositor_capture.hpp
src/capture/vk_layer/: .clang-tidy  CMakeLists.txt  frame_dump.cpp  frame_dump.hpp  ipc_socket.cpp  ipc_socket.hpp  layer_main.cpp  layer_stub.cpp  logging.hpp  vk_capture.cpp  vk_capture.hpp  vk_dispatch.cpp  vk_dispatch.hpp  vk_hooks.cpp  vk_hooks.hpp  wsi_virtual.cpp  wsi_virtual.hpp
src/compositor/: CMakeLists.txt  compositor_core.cpp  compositor_cursor.cpp  compositor_focus.cpp  compositor_input.cpp  compositor_layer_shell.cpp  compositor_present.cpp  compositor_protocol_hooks.hpp  compositor_runtime_metrics.hpp  compositor_server.cpp  compositor_server.hpp  compositor_state.hpp  compositor_targets.hpp  compositor_xdg.cpp  compositor_xwayland.cpp
src/compositor/protocol/: pointer-constraints-unstable-v1-protocol.h  relative-pointer-unstable-v1-protocol.h  xdg-shell-protocol.h
src/input/: CMakeLists.txt  compositor_server.cpp  compositor_server.hpp  input_forwarder.cpp  input_forwarder.hpp  xwayland_server.cpp  xwayland_server.hpp
src/pipeline/: CMakeLists.txt
src/pipeline/graph/: pipeline_graph.hpp
src/pipeline/shader_runtime/: shader_runtime.cpp  shader_runtime.hpp
src/render/: CMakeLists.txt
src/render/backend/: CMakeLists.txt  blit_pipeline.cpp  blit_pipeline.hpp  external_frame_importer.hpp  filter_chain_controller.cpp  filter_chain_controller.hpp  render_output.cpp  render_output.hpp  vulkan_backend.cpp  vulkan_backend.hpp  vulkan_context.cpp  vulkan_context.hpp  vulkan_debug.cpp  vulkan_debug.hpp  vulkan_error.hpp
src/render/chain/: CMakeLists.txt  README.md  chain_runtime.cpp  debug_label_scope.hpp  downsample_pass.cpp  downsample_pass.hpp  filter_chain.cpp  filter_chain.hpp  filter_chain_core.cpp  filter_chain_core.hpp  filter_chain_cpp_wrapper.cpp  filter_pass.cpp  filter_pass.hpp  frame_history.cpp  frame_history.hpp  framebuffer.cpp  framebuffer.hpp  output_pass.cpp  output_pass.hpp  pass.hpp  preset_parser.cpp  preset_parser.hpp  semantic_binder.hpp
src/render/chain/api/c/: goggles_filter_chain_standalone_contract.h
src/render/chain/docs/: integration_guide.md  spec.md
src/render/shader/: CMakeLists.txt  retroarch_preprocessor.cpp  retroarch_preprocessor.hpp  shader_runtime.cpp  shader_runtime.hpp  slang_reflect.cpp  slang_reflect.hpp
src/render/texture/: CMakeLists.txt  texture_loader.cpp  texture_loader.hpp
src/render/vulkan/: blit_pipeline.cpp  blit_pipeline.hpp  vulkan_backend.cpp  vulkan_backend.hpp  vulkan_config.hpp
src/util/: CMakeLists.txt  config.cpp  config.hpp  drm_format.hpp  drm_fourcc.hpp  error.hpp  external_image.hpp  job_system.cpp  job_system.hpp  logging.cpp  logging.hpp  paths.cpp  paths.hpp  profiling.hpp  queues.hpp  runtime_metrics.hpp  serializer.hpp  unique_fd.hpp  util.hpp
src/util/diagnostics/: gpu_timestamp_pool.cpp  gpu_timestamp_pool.hpp
tests/: CMakeLists.txt  README.md
tests/app/: test_child_death_signal.cpp  test_cli.cpp
tests/capture/: test_capture_protocol.cpp  test_capture_receiver.cpp  test_vk_layer_logging.cpp
tests/golden/: README.md
tests/input/: auto_input_forwarding_wayland.cpp  auto_input_forwarding_x11.cpp  goggles_input_test.cpp  goggles_input_test_wayland.cpp  goggles_input_test_x11.cpp  manual_input_wayland.cpp  manual_input_x11.cpp  manual_surface_selector_wayland.cpp  manual_surface_selector_x11.cpp
tests/render/: test_filter_boundary_contracts.cpp  test_filter_chain.cpp  test_filter_chain_retarget.cpp  test_gpu_timestamp_pool.cpp  test_preset_parser.cpp  test_retroarch_preprocessor.cpp  test_runtime_diagnostics.cpp  test_semantic_binder.cpp  test_shader_runtime.cpp  test_shader_validation.cpp  test_slang_reflect.cpp  test_vulkan_backend_subsystem_contracts.cpp  test_zfast_integration.cpp
tests/semgrep/: verify_semgrep_fixtures.py
tests/semgrep/fixtures/src/render/: positive_delete.cpp  positive_delete_array.cpp  positive_raw_new.cpp
tests/util/: test_config.cpp  test_error.cpp  test_job_system.cpp  test_logging.cpp  test_paths.cpp  test_queues.cpp  test_serializer.cpp  test_unique_fd.cpp
tests/util/test_data/: invalid_config.toml  malformed_config.toml  partial_config.toml  valid_config.toml
tests/visual/: CMakeLists.txt  image_compare.cpp  image_compare.hpp  test_image_compare.cpp
(+193 files in other folders)
